--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Academics - Home</title> <!-- Tên trang hiển thị trên tab -->
 
     <!-- Nhúng các file CSS -->
-    <link rel="stylesheet" href="header.css"> <!-- CSS cho header -->
-    <link rel="stylesheet" href="main.css"> <!-- CSS cho nội dung chính -->
+    <link rel="stylesheet" href="Header.css"> <!-- CSS cho header -->
+    <link rel="stylesheet" href="Main.css"> <!-- CSS cho nội dung chính -->
     <link rel="stylesheet" href="Gallery.css"> <!-- CSS cho gallery -->
     <link rel="stylesheet" href="Contact.css"> <!-- CSS cho contact -->
 </head>
@@ -202,3 +202,4 @@
 
 </body>
 </html>
+
