--- a/Gallery.html
+++ b/Gallery.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academics - Gallery</title>
 
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="Main.css">
     <link rel="stylesheet" href="Gallery.css">
 </head>
 
@@ -65,7 +65,7 @@
 
                 <!-- ITEM 1 -->
                 <div class="gallery-item">
-                    <img src="Image/Anhjack.png" alt="Ca sĩ" class="gallery-image">
+                    <img src="image/Anhjack.png" alt="Ca sĩ" class="gallery-image">
                     <div class="gallery-overlay">
                         <h4 class="gallery-overlay-title">Meo Meo</h4>
                         <p class="gallery-overlay-category">Idol Joker Bến Tre</p>
@@ -74,7 +74,7 @@
 
                 <!-- ITEM 2 -->
                 <div class="gallery-item">
-                    <img src="Image/letotnghiep.jpg" alt="Lễ tốt nghiệp" class="gallery-image">
+                    <img src="image/letotnghiep.jpg" alt="Lễ tốt nghiệp" class="gallery-image">
                     <div class="gallery-overlay">
                         <h4 class="gallery-overlay-title">Lễ Tốt Nghiệp</h4>
                         <p class="gallery-overlay-category">Sự Kiện</p>
@@ -83,7 +83,7 @@
 
                 <!-- ITEM 3 -->
                 <div class="gallery-item">
-                    <img src="Image/hoatdongngoaitroi.jpg" alt="Hoạt động ngoài trời" class="gallery-image">
+                    <img src="image/hoatdongngoaitroi.jpg" alt="Hoạt động ngoài trời" class="gallery-image">
                     <div class="gallery-overlay">
                         <h4 class="gallery-overlay-title">Hoạt Động Ngoài Trời</h4>
                         <p class="gallery-overlay-category">Sinh Viên</p>
@@ -92,7 +92,7 @@
 
                 <!-- ITEM 4 (bạn yêu cầu thêm) -->
                 <div class="gallery-item">
-                    <img src="Image/jackmavuong.jpg" alt="Ca sĩ" class="gallery-image">
+                    <img src="image/jackmavuong.jpg" alt="Ca sĩ" class="gallery-image">
                     <div class="gallery-overlay">
                         <h4 class="gallery-overlay-title">Ma Vương</h4>
                         <p class="gallery-overlay-category">Ca sĩ</p>
@@ -110,3 +110,4 @@
 
 </body>
 </html>
+
