--- a/Contact.html
+++ b/Contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academics - Contact Us</title>
 
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="Main.css">
     <link rel="stylesheet" href="Contact.css"> </head>
 
 <body>
@@ -98,4 +98,5 @@
     </section>
 
 </body>
+
 </html>
