--- a/camon.html
+++ b/camon.html
@@ -6,7 +6,7 @@
     <title>Academics - Cảm Ơn</title>
 
     <link rel="stylesheet" href="Header.css">
-    <link rel="stylesheet" href="MMain.css">
+    <link rel="stylesheet" href="Main.css">
     <style>
         /* CSS cơ bản cho trang cảm ơn và animation */
         body {
@@ -118,3 +118,4 @@
 </body>
 
 </html>
+
