--- a/Contact.html
+++ b/Contact.html
@@ -23,8 +23,8 @@
                     <a href="#">Courses</a>
                     <a href="#">Research</a>
                     <a href="#">News</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="contact.html">Contact</a> </nav>
+                    <a href="Gallery.html">Gallery</a>
+                    <a href="Contact.html">Contact</a> </nav>
 
                 <button class="apply-btn">APPLY NOW</button>
             </div>
@@ -100,3 +100,4 @@
 </body>
 
 </html>
+
