--- a/Gallery.html
+++ b/Gallery.html
@@ -30,8 +30,8 @@
                     <a href="#">Courses</a>
                     <a href="#">Research</a>
                     <a href="#">News</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="Gallery.html">Gallery</a>
+                    <a href="Contact.html">Contact</a>
                 </nav>
                 <button class="apply-btn">APPLY NOW</button>
             </div>
@@ -55,4 +55,5 @@
 
 </body>
 </html>
+
 
