--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <a href="#">Courses</a>
                     <a href="#">Research</a>
                     <a href="#">News</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="Gallery.html">Gallery</a>
+                    <a href="Contact.html">Contact</a>
                 </nav>
 
                 <!-- NÚT APPLY NOW -->
@@ -202,4 +202,5 @@
 
 </body>
 </html>
+
 
