--- a/camon.html
+++ b/camon.html
@@ -110,12 +110,39 @@
 
 <body>
     <header>
-        <div claHome.html" class="back-home-btn"> Quay lại Trang chủ </a>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
+                    <div class="logo-text">ACADEMICS</div>
+                </div>
+
+                <nav>
+                    <a href="home.html">Home</a>
+                    <a href="#">Pages</a>
+                    <a href="#">Courses</a>
+                    <a href="#">Research</a>
+                    <a href="#">News</a>
+                    <a href="Gallery.html">Gallery</a>
+                    <a href="Contact.html">Contact</a>
+                </nav>
+
+                <button class="apply-btn">APPLY NOW</button>
+            </div>
+        </div>
+    </header>
+
+    <div class="thank-you-container">
+        <div class="container">
+            <div class="thank-you-message">
+                <img src="image/MEME.GIF" alt="Ảnh Mèo Cảm ơn" class="animated-icon"> 
+                <h1>Cảm ơn bạn!</h1>
+                <p>Chúng tôi đã nhận được tin nhắn của bạn và sẽ phản hồi sớm nhất có thể.</p>
+                <p>Xin vui lòng kiểm tra hộp thư email của bạn trong vòng 24 giờ tới.</p>
+                <a href="index.html" class="back-home-btn"> Quay lại Trang chủ </a>
             </div>
         </div>
     </div>
 
 </body>
-
 </html>
 
