--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
                 </div>
 
                 <nav>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#">Pages</a>
                     <a href="#">Courses</a>
                     <a href="#">Research</a>
@@ -98,6 +98,5 @@
     </section>
 
 </body>
-
 </html>
 
