--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <!-- MENU ĐIỀU HƯỚNG -->
                 <nav> <!-- Thanh menu -->
-                    <a href="home.html">Home</a> <!-- Link về trang chủ -->
+                    <a href="index.html">Home</a> <!-- Link về trang chủ -->
                     <a href="#">Pages</a>
                     <a href="#">Courses</a>
                     <a href="#">Research</a>
@@ -202,5 +202,6 @@
 
 </body>
 </html>
+
 
 
